Fix layout issues: update container widths and GitHub Actions workflow

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -97,7 +97,7 @@ body.sticky-bottom-footer {
 
 .post {
   width: 100%;
-  max-width: 60vw;
+  max-width: 80vw;
   margin: 0 auto;
   padding: 0;
   box-sizing: border-box;
@@ -136,7 +136,7 @@ body.sticky-bottom-footer {
   align-items: start;
   margin: 0 auto;
   padding: 2rem;
-  max-width: 1000px;
+  max-width: 80vw;
   width: 100%;
   box-sizing: border-box;
   position: relative;
